Typo in Pretty date formatting

--- a/xebia-ios/MainStoryboard.storyboard
+++ b/xebia-ios/MainStoryboard.storyboard
@@ -419,6 +419,6 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="vel-80-Cn5"/>
+        <segue reference="xie-EI-zck"/>
     </inferredMetricsTieBreakers>
 </document>
